cluster-cd/apps/base/home/frigate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      name: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: *name
        app: *name
        app.kubernetes.io/instance: *name
        app.kubernetes.io/name: *name
        app.kubernetes.io/part-of: *name
      annotations:
        backup.velero.io/backup-volumes: frigate-data
    spec:
      runtimeClassName: nvidia
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.13.0-beta2
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
            - containerPort: 8554
              name: rtsp
              protocol: TCP
            - containerPort: 1984
              name: go2rtc
              protocol: TCP
            - containerPort: 8555
              name: webrtctcp
              protocol: TCP
            - containerPort: 8555
              name: webrtcudp
              protocol: UDP
          livenessProbe: &probe
            httpGet:
              path: /api/version
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            failureThreshold: 5
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe: *probe
          resources:
            limits:
              memory: 6000Mi
              cpu: "2"
              nvidia.com/gpu: 1
            requests:
              cpu: "1"
              memory: 1000Mi
              nvidia.com/gpu: 1
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
          volumeMounts:
            - mountPath: /dev/bus/usb
              name: usb
            - mountPath: /dev/shm
              name: cache
              medium: Memory
            - mountPath: /media
              name: media
            - mountPath: /data
              name: frigate-data
            - mountPath: /config
              name: mounted-config
      volumes:
        - name: usb
          hostPath:
            path: /dev/bus/usb
            type: Directory
        - name: cache
          emptyDir: {}
        - name: frigate-data
          persistentVolumeClaim:
            claimName: frigate-data
        - name: media
          persistentVolumeClaim:
            claimName: frigate-media
        - name: mounted-config
          emptyDir: {}
        - name: frigate-config
          configMap:
            name: frigate-config
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: google.feature.node.kubernetes.io/coral
                    operator: In
                    values:
                      - "true"
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              preference:
                matchExpressions:
                  - key: google.feature.node.kubernetes.io/coral-type
                    operator: In
                    values:
                      - "m.2"
